EKS/k8s/k8s_manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: Name=alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:731576721364:certificate/8e69b863-a166-4007-a20e-bdda2cff9211
    alb.ingress.kubernetes.io/healthcheck-path: "/admin/login/?next=/admin/"
spec:
  rules:
    - host: test-api.mokkup.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000

          - path: /v1/authservices
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /v1/paymentservices
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /v1/dashboardservices
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8001
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8001
          - path: /v1/blogservices
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 8002
